syntax = "proto3";

package istio.mixer.adapter.sample.quota;

import "mixer/v1/config/descriptor/value_type.proto";
import "mixer/v1/template/extensions.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_QUOTA;

message Template {
    map<string, istio.mixer.v1.config.descriptor.ValueType> dimensions = 1;
    map<string, bool> boolMap = 2;
}
